data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_486.wast
;; 7. **Test Loop Restart Behavior**: A loop with `local.set` to track the number of iterations and `br_if` to restart the loop if a condition is not met. Validate proper jump and reinitialization preventing an infinite loop.

(assert_invalid
  (module
    (func (local i32)
      (loop (result i32)
        (local.set 0 (i32.add (local.get 0) (i32.const 1)))
        (br_if 0 (i32.lt_s (local.get 0) (i32.const 10)))
      )
    )
  )
  "type mismatch"
)